css-folders/wishlist.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap');

body, h1, h2, p, ul, li {
    margin: 0;
    padding: 0;
    list-style: none;
}

body {
    font-family: 'Raleway', sans-serif;
    line-height: 1.6;
    color: #333;
    background-color: #ECF0F1;
}

/* header and navbar */
header {
    background: #2C3E50;
    color: #fff;
    padding: 1rem;
    display: flex;
    align-items: center;  
    font-weight: bold;
}

header h1 {
    font-family: 'Raleway', sans-serif;
    margin: 0;
    margin-left: 10px;
    font-size: 1.8rem;
}

nav ul {
    display: flex;
    align-items: center;
    padding: 0;
    margin: 0;
    list-style: none;
}

.nav-links li {
    font-family: 'Raleway', sans-serif;
    margin-right: 10px;
}

.nav-links li:first-child {
    margin-right: 20px;
}


.site-title {
    font-family: 'Raleway', sans-serif;
    margin-left: 10px;
    font-size: 1.6rem;
    color: #fff;
    text-transform: uppercase;
}


nav ul li a {
    text-decoration: none;
    color: #fff;
    padding: 0.5rem 1rem;
    display: block;
}

nav ul li a:hover {
    background: #555;
    text-decoration: none;
    color: #ccc;
}

.center-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    margin-top: 2rem;
}

.search-bar {
    font-family: 'Raleway', sans-serif;
    width: 300px; 
    padding: 0.5rem; 
    border: 1px solid #ddd; 
    border-radius: 8px; 
    font-size: 1rem; 
    transition: box-shadow 0.3s ease, border-color 0.3s ease; 
}

.search-bar:focus {
    outline: none; 
    border-color: #333; 
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2); 
}

.search-suggestions {
    display: none; 
    position: absolute;
    top: 55px; 
    left: 48%; 
    transform: translateX(-50%); 
    background-color: #fff;
    border-radius: 8px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    z-index: 1000;
    max-height: 300px;
    overflow-y: auto;
    padding: 10px 0;
    width: 300px;
}

.search-suggestions.active {
    display: block;
}

.suggestion-card {
    display: flex;
    align-items: center;
    padding: 10px;
    cursor: pointer;
    border-bottom: 1px solid #ddd;
}

.suggestion-card:hover {
    background-color: #f7f7f7;
}

.suggestion-img {
    width: 40px;
    height: 40px;
    object-fit: cover;
    border-radius: 50%;
    margin-right: 10px;
}

.suggestion-card p {
    margin: 0;
    font-size: 0.9rem;
    color: #333;
}

.search-suggestions p {
    padding: 10px;
    text-align: center;
    color: #777;
}

.search-suggestions.active {
    display: block; 
}


/* login button styles */
.nav-login-button, .nav-register-button, .nav-logout-button {
    font-family: 'Raleway', sans-serif;
    text-decoration: none;
    color: #fff;
    background-color: grey; 
    padding: 0.6rem 1.5rem;
    border-radius: 10px; 
    font-size: 0.9rem;
    font-weight: bold;
    transition: background-color 0.3s ease, transform 0.2s;
    display: inline-block;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
}

.nav-login-button:hover, .nav-register-button:hover, .nav-logout-button:hover {
    background-color: darkgrey; 
    transform: translateY(-2px); 
    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
}

.nav-logout-button {
    background-color: #ff4d4d; 
    color: white;
}

.nav-logout-button:hover {
    background-color: #e60000; 
}

.notification-container {
    position: relative;
}

.notification-button {
    position: relative;
    cursor: pointer;
}

.notification-box {
    display: none;
    position: absolute;
    top: 40px; 
    right: 0;
    background: #fff;
    color: #333;
    border: 1px solid #ccc;
    border-radius: 8px;
    padding: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    width: 200px;
    z-index: 1000;
}

.notification-box p {
    margin: 0;
    padding: 5px;
    font-size: 0.9rem;
}

.notification-box.active {
    display: block;
}

/* offcanvas */
.offcanvas-menu {
    position: fixed;
    top: 0;
    left: -250px;
    width: 250px;
    height: 100%;
    background: #2C3E50;
    color: #fff;
    transition: left 0.3s ease;
    padding-left: 1rem;
    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.3);
    z-index: 1000;
}

.offcanvas-menu ul {
    list-style: none;
    padding: 0;
}

.offcanvas-menu ul li {
    margin: 10px 0;
}

.offcanvas-menu ul li a {
    color: #fff;
    text-decoration: none;
}

.offcanvas-menu ul li a:hover {
    text-decoration: underline;
}

.offcanvas-toggle {
    background: none;
    color: #fff;
    border: none;
    font-size: 1.5rem;
    cursor: pointer;
    margin-right: 1rem;
}

.offcanvas-menu.active {
    left: 0;
}

.cart-wrap {
	padding: 40px 0;
	font-family: 'Raleway', sans-serif;
    background-color: #ECF0F1;
}

.main-heading {
    font-family: 'Raleway', sans-serif;
	font-size: 19px;
	margin-bottom: 20px;
}

.table-wishlist table {
    width: 100%;
    font-family: 'Raleway', sans-serif;
}

.table-wishlist thead {
    border-bottom: 1px solid #e5e5e5;
    margin-bottom: 5px;
}

.table-wishlist thead tr th {
    padding: 8px 0 18px;
    color: #484848;
    font-size: 15px;
    font-weight: 400;
}

.table-wishlist tr td {
    padding: 25px 0;
    vertical-align: middle;
}

.table-wishlist tr td .img-product {
    width: 72px;
    float: left;
    margin-left: 8px;
    margin-right: 31px;
    line-height: 63px;
}

.table-wishlist tr td .img-product img {
	width: 100%;
}

.table-wishlist tr td .name-product {
    font-size: 15px;
    color: #484848;
    padding-top: 8px;
    line-height: 24px;
    width: 50%;
}

.table-wishlist tr td.price {
    font-weight: 600;
}

.table-wishlist tr td .quanlity {
    position: relative;
}

.total {
	font-size: 24px;
	font-weight: 600;
	color: #8660e9;
}

.display-flex {
	display: flex;
}

.align-center {
	align-items: center;
}

.round-black-btn {
	border-radius: 25px;
    background: #212529;
    color: #fff;
    padding: 5px 20px;
    display: inline-block;
    border: solid 2px #212529; 
    transition: all 0.5s ease-in-out 0s;
    cursor: pointer;
    font-size: 14px;
}

.round-black-btn:hover,
.round-black-btn:focus {
	background: transparent;
	color: #212529;
	text-decoration: none;
}

.mb-10 {
    margin-bottom: 10px !important;
}

.mt-30 {
    margin-top: 30px !important;
}

.d-block {
    display: block;
}

.custom-form label {
    font-size: 14px;
    line-height: 14px;
}

.pretty.p-default {
    margin-bottom: 15px;
}

.pretty input:checked~.state.p-primary-o label:before, 
.pretty.p-toggle .state.p-primary-o label:before {
    border-color: #8660e9;
}

.pretty.p-default:not(.p-fill) input:checked~.state.p-primary-o label:after {
    background-color: #8660e9 !important;
}

.main-heading.border-b {
    border-bottom: solid 1px #ededed;
    padding-bottom: 15px;
    margin-bottom: 20px !important;
}

.custom-form .pretty .state label {
    padding-left: 6px;
}

.custom-form .pretty .state label:before {
    top: 1px;
}

.custom-form .pretty .state label:after {
    top: 1px;
}

.custom-form .form-control {
    font-size: 14px;
    height: 38px;
}

.custom-form .form-control:focus {
    box-shadow: none;
}

.custom-form textarea.form-control {
    height: auto;
}

.mt-40 {
    margin-top: 40px !important; 
}

.in-stock-box {
	background: #ff0000;
	font-size: 12px;
	text-align: center;
	border-radius: 25px;
	padding: 4px 15px;
	display: inline-block;  
    color: #fff;
}

.trash-icon {
    font-size: 20px;
    color: #212529;
}

